changed background theme + cartoon

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <!-- GOOGLE FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital@1&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap" rel="stylesheet">
+  
   <!-- CSS -->
   <link rel="stylesheet" href="./style.css">
 
@@ -19,8 +18,9 @@
 
 </head>
 <body>
+  <div class="content">
 
-  <div class = "wrapper">
+    <div class = "wrapper">
       <h2>Laugh of the Day</h2>
 
       <p id = "myJoke">
@@ -30,7 +30,13 @@
         Give me another one!
       </button>
 
+    </div>
+
+    <div class="image">
+      <img src="./cartoon.png" alt="">
+    </div>
   </div>
+
 
   <!-- SCRIPT -->
   <script src = "./script.js"></script>
